--- a/ai_suggestions.html
+++ b/ai_suggestions.html
@@ -4,15 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Suggestions - Message Hub</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #007bff;
+            padding: 10px 20px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        section {
+            padding: 20px;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #f8f9fa;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>AI Suggestions</h1>
-        <nav>
+    <nav>
+        <h1 style="color: white;">Message Hub</h1>
+        <div>
             <a href="signup.html">Sign Up</a>
             <a href="login.html">Login</a>
-        </nav>
-    </header>
+        </div>
+    </nav>
 
     <section>
         <h2>Message from John Doe</h2>
@@ -37,5 +65,9 @@
             <button>Edit</button>
         </div>
     </section>
+
+    <footer>
+        <p>&copy; 2023 Message Hub. All rights reserved.</p>
+    </footer>
 </body>
 </html>
