--- a/dashboard.html
+++ b/dashboard.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Message Hub</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #007bff;
+            padding: 10px 20px;
+        }
         nav a {
-            margin-right: 15px;
+            color: white;
             text-decoration: none;
-            color: black;
+            margin: 0 10px;
         }
         nav img {
             vertical-align: middle;
@@ -16,6 +28,7 @@
         }
         section {
             margin-bottom: 30px;
+            padding: 20px;
         }
         .message {
             display: flex;
@@ -25,19 +38,25 @@
         .message img {
             margin-right: 10px;
         }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #f8f9fa;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Dashboard</h1>
-        <nav>
+    <nav>
+        <h1 style="color: white;">Message Hub</h1>
+        <div>
             <a href="index.html">Home</a>
             <a href="#gmail"><img src="images/gmail-icon.png" alt="Gmail Icon" width="20"> Gmail</a>
             <a href="#whatsapp"><img src="images/whatsapp-icon.png" alt="WhatsApp Icon" width="20"> WhatsApp</a>
             <a href="#instagram"><img src="images/instagram-icon.png" alt="Instagram Icon" width="20"> Instagram</a>
             <a href="#facebook"><img src="images/facebook-icon.png" alt="Facebook Icon" width="20"> Facebook</a>
-        </nav>
-    </header>
+        </div>
+    </nav>
 
     <section id="gmail">
         <h2>Gmail Messages</h2>
@@ -79,5 +98,9 @@
             <small>1:00 PM</small>
         </div>
     </section>
+
+    <footer>
+        <p>&copy; 2023 Message Hub. All rights reserved.</p>
+    </footer>
 </body>
 </html>
