--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Message Hub</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
         header {
             background-image: url('images/hero-bg.jpg');
             background-size: cover;
@@ -14,6 +19,18 @@
             text-align: center;
             padding-top: 100px;
         }
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #007bff;
+            padding: 10px 20px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+        }
         .feature {
             display: flex;
             align-items: center;
@@ -22,17 +39,33 @@
         .feature img {
             margin-right: 15px;
         }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #f8f9fa;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
+    <nav>
+        <h1 style="color: white;">Message Hub</h1>
+        <div>
+            <a href="index.html">Home</a>
+            <a href="dashboard.html">Dashboard</a>
+            <a href="signup.html">Sign Up</a>
+            <a href="login.html">Login</a>
+        </div>
+    </nav>
+
     <header>
         <h1>Message Hub</h1>
         <p>Welcome to Message Hub</p>
         <p>Manage all your messages in one place from Gmail, WhatsApp, Instagram, and Facebook.</p>
-        <a href="dashboard.html" style="background-color: #007bff; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Go to Dashboard</a>
+        <a href="dashboard.html" style="background-color: #ffffff; color: #007bff; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Go to Dashboard</a>
     </header>
 
-    <section>
+    <section style="padding: 20px;">
         <h2>Why Choose Message Hub?</h2>
         <div class="feature">
             <img src="images/gmail-icon.png" alt="Unified Inbox Icon" width="30">
@@ -47,5 +80,9 @@
             <p>Intuitive interface designed for seamless usability across devices.</p>
         </div>
     </section>
+
+    <footer>
+        <p>&copy; 2023 Message Hub. All rights reserved.</p>
+    </footer>
 </body>
 </html>
