--- a/login.html
+++ b/login.html
@@ -4,13 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Message Hub</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #007bff;
+            padding: 10px 20px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        form {
+            max-width: 400px;
+            margin: 50px auto;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #f8f9fa;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Login</h1>
-    </header>
+    <nav>
+        <h1 style="color: white;">Message Hub</h1>
+        <div>
+            <a href="index.html">Home</a>
+            <a href="signup.html">Sign Up</a>
+        </div>
+    </nav>
 
     <form action="#">
+        <h2>Login</h2>
         <label for="email">Email</label>
         <input type="email" id="email" required><br>
         <label for="password">Password</label>
@@ -18,6 +74,10 @@
         <button type="submit">Login</button>
     </form>
 
-    <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+    <p style="text-align: center;">Don't have an account? <a href="signup.html">Sign Up</a></p>
+
+    <footer>
+        <p>&copy; 2023 Message Hub. All rights reserved.</p>
+    </footer>
 </body>
 </html>
